@@ -1,3 +1,12 @@
+2009-02-17  Philip Withnall  <philip@tecnocode.co.uk>
+
+	* src/plugins/properties/bacon-video-widget-properties.c
+	(bacon_video_widget_properties_class_init),
+	(bacon_video_widget_properties_init),
+	(bacon_video_widget_properties_dispose): Tidy up
+	BaconVideoWidgetProperties a little and remove a deprecated GTK+ call.
+	(Closes: #572089)
+
 2009-02-16  Bastien Nocera  <hadess@hadess.net>
 
 	* src/totem-video-thumbnailer.c (main): When printing
